--- a/style.css
+++ b/style.css
@@ -22,9 +22,8 @@ label{
     }
     nav{
         position: absolute;
-        /* border: 1px solid white; */
+        background: rgba(0,0,0,0.6);
         padding: 5px;
-        /* border-radius: 20px; */
         left: -140px;
     }
     #click:checked~nav{
